# 1-Vertiche-BackEnd

./: CCPruebas_GeminiAI.ipynb  CCpruebasOCR.ipynb  Pruebas2.ipynb  Pruebas3.ipynb  Pruebas_GeminiAI.ipynb  README.md  auditoria_contratos.json  procesos.py  prueba.txt  pruebas1.ipynb  pruebasOCR.ipynb
Docs/: VERTICHE.pptx
chroma_db/: chroma.sqlite3
db_vertiche_final/: chroma.sqlite3
jsons/: C01_Contrato_Prueba-01.json  C02_Contrato_Colima-02.json  estructurado_C01_Contrato_Prueba-01.json  estructurado_C02_Contrato_Colima-02.json  estructurado_auditoria_contratos.json
langchainENV/: main.py  pyproject.toml
