[project]
name = "langchainenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.5.1",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pypdf>=6.7.1",
    "pytesseract>=0.3.13",
]
